<resources>
    <string name="app_name">Animated wallpapers</string>
    <string name="description">Live 2D wallpapers</string>
    <string name="choose">Choose the wallpaper</string>

    <string name="version">Version</string>
    <string name="versionV">1.0</string>

    <!-- Ads -->
    <string name="ads">Ads</string>
    <string name="adsO">Ok</string>
    <string name="adsN">Cancel</string>
    <string name="adsD">Ads disabled !</string>


    <string name="banner_ad_unit_id">ca-app-pub-1060148675448438/9756338702</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1060148675448438/5186538306</string>

    <!-- for tests -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->

</resources>
